use new testing tenants